objects/Dealer_Compliance_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consumer Lending Compliance Updates</relationshipLabel>
        <relationshipName>Consumer_Lending_Compliance_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who completed the Dealer Compliance Requirement Task</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dealer_Compliance_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that signify completion of Dealer Compliance Task</description>
        <label>Compliance Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Description__c</fullName>
        <description>Description of the Dealer Compliance Task.</description>
        <label>Compliance Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>Date when the Dealer Compliance Task was completed</description>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <formula>Opportunity__r.Account.Partner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity which the Dealer Compliance Requirement Task is related</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Dealer_Compliance_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current condition of the Dealer Compliance Requirement Task (Open / Completed)</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Consumer Lending Compliance Update</label>
    <nameField>
        <label>Consumer Lending Compliance Update</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumer Lending Compliance Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>